--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -35,7 +35,7 @@
 
     <!--Artist of the week -->
 
-    <div class="col-md-3">
+    <div class="col-md-3" *ngIf="artistOfTheWeek">
       <div class="square-card">
         <div (click)="showProfileForArtistOfTheWeek()" alt="square card" style="display: block;">
           <div class="card-header">
